  ChangeLog
  =========

This is a detailed list of ongoing changes.  Add changes to 
the top of this file.

Changes by R. Holmes on 9 Jul 2002
-----------------------------------

Some steps on the way to putting event data in the pair tree -- if
Bob's upcoming work doesn't make it all obsolete.  Central is the new
method VaAnalysis::ChanListFromName (const string& chanbase, const
string& other, const UInt_t flags = 0).  This looks through all
devices, finds those whose name starts with the string chanbase, and
makes a channel list including those devices with the given string and
flags. Example: ChanListFromName ("batt", "chan", flag) might return: 
< <"batt1", key1, "chan", flag>, <"batt2", key2, "chan", flag> >
(if those are the only two channels starting with "batt").

Doing this required a new access function, TaRun::GetDevices().  As an
illustration of how this works, I added two lines of code to
TaBeamAna::InitChanLists to put all battery event data in the pair
tree. 

TaRun.hh

 o Add GetDevices()

VaAnalysis.{hh,cc}

 o Add ChanListFromName

TaBeamAna.cc

 o For illustrative purposes, call ChanListFromName to put battery
   event data in pair tree


Changes by R. Holmes on 26 Jun 2002
-----------------------------------

TaADCCalib.{hh,cc} TaAnalysisManager.{hh,cc} VaAnalysis.{hh,cc}

 o Changed VaAnalysis::Init and its derived method in TaADCCalib to
   take a Bool_t, not Int_t, argument, for clarity.

TaADCCalib.cc VaAnalysis.cc

 o Improved diagnostics by tagging them with the method name, and
   sending them to the appropriate output stream (cerr, clog).


Changes by R. Michaels on 23 Jun 2002
-----------------------------------

Improving the online feedback software

1) Small bugs fixed to permit ET system to work correctly.
2) In main.cc, the TaAnalysisManager object is a global pointer
   and there is a new "killsignal" function (using signal.h)
   so that "kill -31 pid" will end the run gracefully.
   The killsignal function calls am->End(), etc.